--- a/apps/to-bot/package.json
+++ b/apps/to-bot/package.json
@@ -11,6 +11,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "discord-api-types": "^0.37.47",
     "discord.js": "^14.11.0",
     "nodemon": "^3.0.0",
     "ts-node": "^10.9.1"
