--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,16 +7,23 @@
     "build": "tsc",
     "dev": "nodemon --ignore tests/ --watch src -e ts,tsx --exec \"dotenv -e ../../.env ts-node src/index.ts\"",
     "start": "node dist/index.js",
-    "lint": "eslint \"**/*.ts\" --quiet --fix --cache"
+    "lint": "eslint \"**/*.ts\" --quiet --fix --cache",
+    "migrate": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback"
   },
   "license": "MIT",
   "dependencies": {
+    "@koa/bodyparser": "^5.0.0",
+    "@koa/router": "^12.0.0",
     "@types/koa": "^2.13.6",
+    "better-sqlite3": "^8.4.0",
+    "knex": "^2.5.0",
     "koa": "^2.14.2",
     "nodemon": "^3.0.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/koa__router": "^12.0.0",
     "@types/node": "^17.0.12",
     "dotenv-cli": "^7.2.1",
     "eslint-config-custom": "workspace:*",
