--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/koa-bodyparser": "^4.3.10",
     "@types/koa__router": "^12.0.0",
     "@types/node": "^17.0.12",
     "dotenv-cli": "^7.2.1",
