--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "discord:dev": "turbo run dev --filter=discord",
+    "api:dev": "turbo run dev --filter=api"
   },
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
