feat(api): added new repository pattern

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "dev": "nodemon --ignore tests/ --watch src -e ts,tsx --exec \"dotenv -e ../../.env ts-node src/index.ts\"",
     "start": "node dist/index.js",
-    "lint": "eslint \"**/*.ts\" --quiet --fix --cache",
+    "lint": "eslint \"**/*.ts\" --quiet --cache",
     "migrate": "knex migrate:latest",
     "migrate:rollback": "knex migrate:rollback"
   },
