feat: new core module

--- a/apps/to-bot/package.json
+++ b/apps/to-bot/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
+    "core": "workspace:*",
     "dotenv-cli": "^7.2.1",
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
