--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,9 +7,7 @@
     "build": "tsc",
     "dev": "nodemon --ignore tests/ --watch src -e ts,tsx --exec \"dotenv -e ../../.env ts-node src/index.ts\"",
     "start": "node dist/index.js",
-    "lint": "eslint \"**/*.ts\" --quiet --cache",
-    "migrate": "knex migrate:latest",
-    "migrate:rollback": "knex migrate:rollback"
+    "lint": "eslint \"**/*.ts\" --quiet --cache"
   },
   "license": "MIT",
   "dependencies": {
@@ -26,6 +24,7 @@
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa__router": "^12.0.0",
     "@types/node": "^17.0.12",
+    "core": "workspace:*",
     "dotenv-cli": "^7.2.1",
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
