--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,12 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "db:migrate": {
+      "cache": false
+    },
+    "db:rollback": {
+      "cache": false
     }
   }
 }
