--- a/apps/discord-client/package.json
+++ b/apps/discord-client/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --ignore tests/ --watch src -e ts,tsx --exec \"dotenv -e ../../.env ts-node src/index.ts\"",
     "start": "node dist/index.js",
     "lint": "eslint \"**/*.ts\" --quiet --cache",
-    "deploy:commands": "tsc ./src/deployCommands.ts"
+    "deploy:commands": "dotenv -e ../../.env ts-node ./src/deployCommands.ts"
   },
   "license": "MIT",
   "dependencies": {
