--- a/apps/discord-client/package.json
+++ b/apps/discord-client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "discord-api-types": "^0.37.47",
     "discord.js": "^14.11.0",
+    "knex": "^2.5.0",
     "nodemon": "^3.0.0",
     "ts-node": "^10.9.1"
   },
