--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,6 +15,7 @@
     "@koa/router": "^12.0.0",
     "@types/koa": "^2.13.6",
     "better-sqlite3": "^8.4.0",
+    "dotenv": "^16.3.1",
     "knex": "^2.5.0",
     "koa": "^2.14.2",
     "nodemon": "^3.0.0"
