refactor(core|database): renaming core package to database

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "core",
+  "name": "database",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
@@ -16,7 +15,6 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
-    "dotenv-cli": "^7.2.1",
     "eslint-config-custom": "workspace:*",
     "ts-node": "^10.9.1",
     "tsconfig": "workspace:*",
