--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,7 +15,7 @@
     "@koa/router": "^12.0.0",
     "@types/koa": "^2.13.6",
     "better-sqlite3": "^8.4.0",
-    "dotenv": "^16.3.1",
+    
     "knex": "^2.5.0",
     "koa": "^2.14.2",
     "nodemon": "^3.0.0"
@@ -24,8 +24,8 @@
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa__router": "^12.0.0",
     "@types/node": "^17.0.12",
-    "core": "workspace:*",
-    "dotenv-cli": "^7.2.1",
+    "database": "workspace:*",
+    "env": "workspace:*",
     "eslint-config-custom": "workspace:*",
     "ts-node": "^10.9.1",
     "tsconfig": "workspace:*",
