refactor(database|env): adding to-bot prefix to packages

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,8 +24,8 @@
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa__router": "^12.0.0",
     "@types/node": "^17.0.12",
-    "database": "workspace:*",
-    "env": "workspace:*",
+    "@to-bot/database": "workspace:*",
+    "@to-bot/env": "workspace:*",
     "eslint-config-custom": "workspace:*",
     "ts-node": "^10.9.1",
     "tsconfig": "workspace:*",
