--- a/apps/discord-client/package.json
+++ b/apps/discord-client/package.json
@@ -20,8 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
-    "database": "workspace:*",
-    "dotenv-cli": "^7.2.1",
+    "@to-bot/database": "workspace:*",
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.3"
