--- a/packages/env/tsconfig.json
+++ b/packages/env/tsconfig.json
@@ -1,7 +1,5 @@
 {
     "extends": "tsconfig/base.json",
-    "compilerOptions": {
-        "outDir": "dist"
-    },
+    "include": ["."],
     "exclude": ["node_modules", "./dist/**/*"]
 }
