--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@to-bot/env",
   "version": "1.0.0",
-  "description": "@to-bot/environment loader",
+  "description": "environment loader",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
