--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@to-bot/env",
   "version": "1.0.0",
-  "description": "@to-bot/environment loader",
-  "main": "index.ts",
+  "description": "environment loader",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
