--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "api:dev": "turbo run dev --filter=api",
     "api:build": "turbo run build --filter=api",
     "api:start": "turbo run start --filter=api",
-    "db:migrate": "turbo run db:migrate --filter=core",
-    "db:rollback": "turbo run db:rollback --filter=core"
+    "db:migrate:generate": "turbo run db:migrate:generate --filter=database",
+    "db:migrate": "turbo run db:migrate --filter=database"
   },
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
