feat(scheduler): initial scheduler base app

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "api:dev": "turbo run dev --filter=api",
     "api:build": "turbo run build --filter=api",
     "api:start": "turbo run start --filter=api",
+    "scheduler:dev": "turbo run dev --filter=scheduler",
+    "scheduler:build": "turbo run build --filter=scheduler",
+    "scheduler:start": "turbo run start --filter=schedulerapi",
     "db:migrate:generate": "turbo run db:migrate:generate --filter=database",
     "db:migrate": "turbo run db:migrate --filter=database"
   },
