--- a/apps/scheduler/package.json
+++ b/apps/scheduler/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@koa/bodyparser": "^5.0.0",
+    "@koa/cors": "^5.0.0",
     "@koa/router": "^12.0.0",
     "koa": "^2.14.2",
     "node-cron": "^3.0.3",
@@ -22,6 +23,7 @@
     "@to-bot/env": "workspace:*",
     "@types/koa": "^2.13.6",
     "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.0",
     "@types/node": "^17.0.12",
     "@types/node-cron": "^3.0.11",
