--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@koa/bodyparser": "^5.0.0",
+    "@koa/cors": "^5.0.0",
     "@koa/router": "^12.0.0",
     "@types/koa": "^2.13.6",
     "koa": "^2.14.2",
@@ -21,6 +22,7 @@
     "@to-bot/database": "workspace:*",
     "@to-bot/env": "workspace:*",
     "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.0",
     "@types/node": "^17.0.12",
     "eslint-config-custom": "workspace:*",
