--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -13,5 +13,8 @@
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.3"
+  },
+  "dependencies": {
+    "zod": "^3.22.4"
   }
 }
