--- a/apps/web-client/package.json
+++ b/apps/web-client/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@to-bot/database": "workspace:*",
     "@types/node": "^18.19.7",
+    "dayjs-nuxt": "^2.1.9",
     "nuxt": "^3.9.2",
     "typescript": "^4.9.5",
     "vite-plugin-vuetify": "^2.0.1",
